--- a/app/views/events/_upcoming.html.haml
+++ b/app/views/events/_upcoming.html.haml
@@ -11,4 +11,4 @@
         - events.each do |event|
           - if event.start_at.to_date == date || event.end_at.to_date == date
             %p
-              = link_to event, event
+              = link_to event, [event.calendar.calendarable, event]
