--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -34,5 +34,5 @@
 
 %br 
 
-= render :partial => "events/upcoming", :locals => {:events => @project.calendar.events}
+= render :partial => "events/upcoming", :locals => {:events => @project.events}
 
