--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -16,31 +16,48 @@
 
   - if logged_in?
   
-    - if @calendarable.roles.first(:conditions => {:user_id => current_user.id})
+    - if (@calendarable.is_a?(Project) && @calendarable.roles.first(:conditions => {:user_id => current_user.id})) || (@calendarable.is_a?(User) && @calendarable == current_user)
       %h3
         Add an event on
         = Time.now.strftime("%b %d")
-      = render :partial => "events/add_form", :locals => {:event => @calendarable.calendar.events.new(:start_at => Time.now)}
+      = render :partial => "events/add_form", :locals => {:event => Event.new(:start_at => Time.now)}
     
-    / - if @calendarable.is_a?(User) && @calendarable == current_user
-    /   %h3 Available calendars
-    /   - form_tag [@calendarable, :events], :method =>:get, :id => "filter_calendars_form" do
-    /     - @calendarable.calendars.each do |calendar|
-    /       %p
-    /         %label
-    /           = check_box_tag "calendar_ids[]", calendar.id, (!params[:calendar_ids] || params[:calendar_ids].include?(calendar.id.to_s))
-    /           = calendar.name
-    /         - unless calendar.name == 'default'
-    /           = link_to "Remove", calendar, :method => :delete
-    /     = hidden_field_tag "calendar_ids[]"
-    /     = submit_tag "Show Selected Calendars"
-    / 
-    /   %h3 Add New Calendar
-    /   - form_tag [@calendarable, :calendars], :multipart => true do
-    /     = file_field_tag :ical_file
-    /     = submit_tag "Upload"
+    %h2 Filter by calendars
+    - form_tag [@calendarable, :events], :method =>:get, :id => "filter_calendars_form" do
+      - @calendarable.calendars.each do |calendar|
+        %p
+          %label
+            = check_box_tag "calendar_ids[]", calendar.id, (!params[:calendar_ids] || params[:calendar_ids].include?(calendar.id.to_s))
+            = calendar.name
+          - unless calendar.name == 'default'
+            = link_to "Remove", [calendar.calendarable, calendar], :method => :delete
+      = hidden_field_tag "calendar_ids[]"
+      %br
+      - if @calendarable.is_a?(Project)
+        %h2 Filter by project members
+        %p
+          %label
+            = check_box_tag "user_ids[]", "all", true
+            All
+        - @calendarable.roles.each do |role|
+          %p
+            %label
+              = check_box_tag "user_ids[]", role.user_id, true
+              (#{Time.current.in_time_zone(role.user.contact.time_zone).to_s(:time)})
+              = role.user
+        %br
+      = hidden_field_tag "user_ids[]"
+      %p
+        = submit_tag "Apply Filters"
+    %br
+    %h1 Add New Calendar
+    - form_tag [@calendarable, :calendars], :multipart => true do
+      = file_field_tag :ical_file
+      = submit_tag "Upload"
+    
+    
 
-- ical_url = polymorphic_path([@calendarable, :calendar], :format => :ical)
+- ical_url = polymorphic_path([@calendarable, :events], :format => :ical)
 %p
   = link_to "Get calendar in Ical format", ical_url
 
