--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -167,6 +167,10 @@ table.index
   td, th
     padding: 10px
 
+table.tasks_index
+  td, th
+    padding: 5px
+    
 .even
   background-color: #F0F8FF
 
