--- a/app/views/events/_add_form.html.haml
+++ b/app/views/events/_add_form.html.haml
@@ -19,11 +19,11 @@
   - f.inputs do
     = f.input :calendar, :collection => @calendarable.calendars
     = f.input :summary, :label => "Subject"
-    = f.input :is_all_day, :label => "All day?"
+    = f.input :all_day, :label => "All day?"
     = f.input :start_at, :as => :time, :label => "What time?"
     = f.input :duration, :label => "How long?"
     = f.input :location, :label => "Where?"
-    = f.input :repeat_frequency, :as => :select, :collection => Event::RECURRING_TYPES, :label => "Repeat every"
-    = f.input :repeat_until_date, :label => "Until Date"
+    = f.input :repeat_frequency, :as => :select, :collection => EventSeries::RECURRING_TYPES, :label => "Repeat every"
+    = f.input :repeat_until_date, :as => :date, :label => "Until Date"
     = f.input :invitees
   = f.buttons
