--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -178,3 +178,31 @@ ins.diffmod, ins.diffins
   background-color: #dfd
 del.diffmod, del.diffdel
   background-color: #faa
+
+.pagination
+  padding: 3px
+  margin: 3px
+  a
+    padding: 2px 5px 2px 5px
+    margin: 2px
+    // border: 1px solid #aaaadd
+    text-decoration: none
+    color: #000099
+  a.hover
+    // border: 1px solid #000099
+    color: #000
+  a.active
+    // border: 1px solid #000099
+    color: #000  
+  span.current    
+    padding: 2px 5px 2px 5px
+    margin: 2px
+    // border: 1px solid #000099
+    font-weight: bold
+    background-color: #cc3700
+    color: #FFF
+  span.disabled     
+    padding: 2px 5px 2px 5px
+    margin: 2px
+    // border: 1px solid #eee
+    color: #ddd
