--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -166,10 +166,38 @@ h3
 table.index
   td, th
     padding: 10px
-
+  tr.header
+    background-color: #F5F5DC
+    font-weight: bold
+    text-align: left
+    height: 28px
+    text-align: center
+    color: #093D72
+  tr.header a:hover
+    background-color: #FFFFFF
+    color: #BB4606
+  tr.header a
+    background: url(../images/nav-arrow-down-open1.png) no-repeat right
+    color: #BB4606
+    padding-right: 15px
+  
 table.tasks_index
   td, th
     padding: 5px
+  tr.header
+    background-color: #F5F5DC
+    font-weight: bold
+    text-align: left
+    height: 28px
+    text-align: center
+    color: #093D72
+  tr.header a:hover
+    background-color: #FFFFFF
+    color: #BB4606
+  tr.header a
+    background: url(../images/nav-arrow-down-open1.png) no-repeat right
+    color: #BB4606
+    padding-right: 15px
     
 .even
   background-color: #F0F8FF
