--- a/public/stylesheets/sass/_default - Copy.sass
+++ b/public/stylesheets/sass/_default - Copy.sass
@@ -162,13 +162,17 @@ h3
   width: 80%
 .content_70
   width: 70%
- 
+
 table.index
   td, th
-    padding: 5px 10px 0px 5px
+    padding: 10px
   tr.header
-    background-color: #F9FAED
-    heigth: 30px
+    background-color: #F5F5DC
+    font-weight: bold
+    text-align: left
+    height: 28px
+    text-align: center
+    color: #093D72
   tr.header a:hover
     background-color: #FFFFFF
     color: #BB4606
@@ -176,13 +180,25 @@ table.index
     background: url(../images/nav-arrow-down-open1.png) no-repeat right
     color: #BB4606
     padding-right: 15px
-    text-decoration: none
   
-  td.min200
-    width: 200px
-  td.right
-    text-align:right
-
+table.tasks_index
+  td, th
+    padding: 5px
+  tr.header
+    background-color: #F5F5DC
+    font-weight: bold
+    text-align: left
+    height: 28px
+    text-align: center
+    color: #093D72
+  tr.header a:hover
+    background-color: #FFFFFF
+    color: #BB4606
+  tr.header a
+    background: url(../images/nav-arrow-down-open1.png) no-repeat right
+    color: #BB4606
+    padding-right: 15px
+    
 .even
   background-color: #F0F8FF
 
