--- a/public/stylesheets/sass/_articles.sass
+++ b/public/stylesheets/sass/_articles.sass
@@ -5,10 +5,10 @@ span.match
   .container
     padding-bottom: 10px
   .source
-    background-color: #E8E8E8
-    color: #A8A8A8
+    background-color: #F7F7F7
+    color: #8F898A
     padding-bottom: 1px
-    margin-top: 2px
+    margin-top: 10px
     font-size: 1em
   .article
     > .left
