--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,14 +13,14 @@
     
     #container
       #header
-        %span.links
-          = link_to "View Public Profile"
-          = link_to "LinkedIn Profile", nil, :class => :orange
-          = link_to "Account"
-        %span.status
-          - if logged_in?
-            = link_to "Edit Profile", edit_registration_path, :popup => :true
-            = link_to "Logout #{current_user}", destroy_user_session_path
+        = link_to " Open Profiles ", :popup => :true
+        = link_to " Organize Mosaic ", :popup => :true
+        = link_to " Work Backstage ", nil, :class => :orange
+        - if logged_in?
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
+          = link_to " My Account ", :popup => :true
+          = link_to " My Profile ", edit_registration_path, :popup => :true
+          = link_to "Logout #{current_user}", destroy_user_session_path
       #sidebar.left
         = image_tag('logo.png')
         .home{:class => (request.request_uri == root_path || (current_user && request.request_uri == polymorphic_path(current_user))) ? "current" : nil}
