--- a/app/views/layouts/tasks.html.haml
+++ b/app/views/layouts/tasks.html.haml
@@ -5,6 +5,7 @@
     = javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery?
     = stylesheet_link_tag 'reset', 'ui-lightness/jquery-ui-1.7.2.custom', 'formtastic', 'formtastic_changes', 'jquery.autocomplete', 'application', "event_calendar", "colorbox", :cache => "base"
     = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.7.2.custom.min', 'jquery.colorbox-min', 'jquery.autocomplete.pack', 'jquery.validate.pack', 'application', :cache => "base"
+    = include_colorbox_assets
   %body
     / #preloader{:style => "display:none"}
     /   #preloader-spinner
@@ -12,14 +13,14 @@
     
     #container
       #header
-        %span.links
-          = link_to "View Public Profile"
-          = link_to "LinkedIn Profile", nil, :class => :orange
-          = link_to "Account"
-        %span.status
-          - if logged_in?
-            = link_to "Edit Profile", edit_registration_path, :popup => :true
-            = link_to "Logout #{current_user}", destroy_user_session_path
+        = link_to " Open Profiles ", :popup => :true
+        = link_to " Organize Mosaic ", :popup => :true
+        = link_to " Work Backstage ", nil, :class => :orange
+        - if logged_in?
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
+          = link_to " My Account ", :popup => :true
+          = link_to " My Profile ", edit_registration_path, :popup => :true
+          = link_to "Logout #{current_user}", destroy_user_session_path
       #sidebar.left
         = image_tag('logo.png')
         .home{:class => (request.request_uri == root_path || (current_user && request.request_uri == polymorphic_path(current_user))) ? "current" : nil}
