--- a/app/views/wiki_pages/_form.html.haml
+++ b/app/views/wiki_pages/_form.html.haml
@@ -7,7 +7,7 @@
 
 - semantic_form_for [@project, @wiki_page] do |f|
   - f.inputs do
-    = f.input :title
-    = f.input :content
+    = f.text_field :title
+    = f.text_area :content, :rows => 70, :cols => 500
   - f.buttons do
     = f.commit_button "Update"
