--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -386,23 +386,24 @@ h3 {
       margin: 8px; }
 
 #container {
-  margin: 10px 20px; }
+  margin: 6px 20px; }
 
 #header {
   margin-bottom: 10px;
   text-align: right; }
   #header a {
-    padding: 2px 8px; }
-  #header .links a.orange {
-    background-color: #FFFED1;
-    color: black;
-    text-decoration: none;
-    font-size: 1.1em;
-    border-color: #D1D1CD;
-    border-style: solid;
-    border-width: 2px; }
-  #header .status {
-    margin-left: 20px; }
+    padding: 2px 20px;
+    font-size: 0.9em;
+    text-decoration: none; }
+  #header a.orange {
+    background-color: #00800B;
+    color: white;
+    box-shadow: 0px 0px 5px #27272B;
+    -moz-box-shadow: 0px 0px 5px #27272B;
+    -webkit-box-shadow: 0px 0px 5px #27272B;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px; }
 
 #sidebar {
   width: 20%; }
@@ -444,7 +445,13 @@ h3 {
   width: 76%;
   float: right;
   padding: 10px 2%;
-  background-color: #fff; }
+  background-color: #fff;
+  box-shadow: 0px 0px 6px #A8A6A0;
+  -moz-box-shadow: 0px 0px 6px #A8A6A0;
+  -webkit-box-shadow: 0px 0px 6px #A8A6A0;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px; }
   #content h1 {
     text-align: center;
     padding: 10px 30px 10px 30px;
@@ -485,24 +492,32 @@ h3 {
 .content_70 {
   width: 70%; }
 
+small_text {
+  font-size: 0.8em; }
+
 table.index td, table.index th {
-  padding: 5px 10px 0px 5px; }
+  padding: 5px 10px 0px 5px;
+  text-align: left; }
 table.index tr.header {
-  background-color: #F9FAED;
-  heigth: 30px; }
+  background-color: #DAE0E0;
+  heigth: 30px;
+  color: #221C26; }
 table.index tr.header a:hover {
-  background-color: #FFFFFF;
-  color: #BB4606; }
+  background-color: white; }
 table.index tr.header a {
   background: url(../images/nav-arrow-down-open1.png) no-repeat right;
-  color: #BB4606;
+  color: #221C26;
   padding-right: 15px;
   text-decoration: none; }
 table.index td.min200 {
   width: 200px; }
+table.index td.min600 {
+  width: 600px; }
+table.index td.top {
+  vertical-align: top; }
 
 .even {
-  background-color: #F0F8FF; }
+  background-color: #F5FEFF; }
 
 ins.diffmod, ins.diffins {
   background-color: #dfd; }
@@ -534,14 +549,14 @@ del.diffmod, del.diffdel {
     color: #ddd; }
 
 #comments .comment {
-  box-shadow: 0px 0px 4px #ccc;
-  -moz-box-shadow: 0px 0px 4px #ccc;
-  -webkit-box-shadow: 0px 0px 4px #ccc;
+  box-shadow: 0px 0px 4px #F2F0F0;
+  -moz-box-shadow: 0px 0px 4px #F2F0F0;
+  -webkit-box-shadow: 0px 0px 4px #F2F0F0;
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 1px; }
+  border: 1px solid #F2F0F0;
+  padding: 3px; }
   #comments .comment .comment-header {
     cursor: pointer; }
     #comments .comment .comment-header .user-image {
@@ -555,17 +570,10 @@ del.diffmod, del.diffdel {
       color: #aaa; }
 
 #new_comment_form {
-  box-shadow: 0px 0px 4px #ccc;
-  -moz-box-shadow: 0px 0px 4px #ccc;
-  -webkit-box-shadow: 0px 0px 4px #ccc;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 10px; }
+  padding-top: 10px; }
   #new_comment_form #comment_message {
-    width: 95%;
-    height: 100px; }
+    width: 99%;
+    height: 90px; }
   #new_comment_form fieldset.buttons {
     padding: 0; }
 
@@ -575,10 +583,10 @@ span.match {
 #articles .container {
   padding-bottom: 10px; }
 #articles .source {
-  background-color: #E8E8E8;
-  color: #A8A8A8;
+  background-color: #F7F7F7;
+  color: #8F898A;
   padding-bottom: 1px;
-  margin-top: 2px;
+  margin-top: 10px;
   font-size: 1em; }
 #articles .article {
   padding: 2px; }
