--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -11,7 +11,6 @@ html, body
   margin: 0
   padding: 0
 
-
 body
   background-color: #eee
   font-family: 'Lucida Grande', Verdana, Arial, Tahoma, Helvetica
@@ -65,24 +64,20 @@ h3
       margin: 8px
 
 #container
-  margin: 10px 20px
+  margin: 6px 20px
 
 #header
   margin-bottom: 10px
   text-align: right
   a
-    padding: 2px 8px
-  .links
-    a.orange
-      background-color: #FFFED1
-      color: black
-      text-decoration: none
-      font-size: 1.1em
-      border-color: #D1D1CD
-      border-style: solid
-      border-width: 2px
-  .status
-    margin-left: 20px
+    padding: 2px 20px
+    font-size: 0.9em
+    text-decoration: none
+  a.orange
+    background-color: #00800B
+    color: white
+    +box-shadow("0px 0px 5px #27272B")
+    +border-radius("2px")
   
 #sidebar
   width: 20%
@@ -121,12 +116,13 @@ h3
         font-weight: bold
         color: #FF5900
 
-      
 #content
   width: 76%
   float: right
   padding: 10px 2%
   background-color: #fff
+  +box-shadow("0px 0px 6px #A8A6A0")
+  +border-radius("4px")
   h1
     text-align: center
     padding: 10px 30px 10px 30px
@@ -155,36 +151,43 @@ h3
 .red
   color: #faa
 
-
 .content_20
   width: 20%
 .content_80
   width: 80%
 .content_70
   width: 70%
- 
+
+small_text
+  font-size: 0.8em
+
 table.index
   td, th
     padding: 5px 10px 0px 5px
+    text-align: left
   tr.header
-    background-color: #F9FAED
+    background-color: #DAE0E0
     heigth: 30px
+    color: #221C26
   tr.header a:hover
-    background-color: #FFFFFF
-    color: #BB4606
+    background-color: white
   tr.header a
     background: url(../images/nav-arrow-down-open1.png) no-repeat right
-    color: #BB4606
+    color: #221C26
     padding-right: 15px
     text-decoration: none
   
   td.min200
     width: 200px
+  td.min600
+    width: 600px
   td.right
     text-align:right
-
+  td.top
+    vertical-align: top
+  
 .even
-  background-color: #F0F8FF
+  background-color: #F5FEFF
 
 ins.diffmod, ins.diffins
   background-color: #dfd
