--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -66,4 +66,4 @@
 - if logged_in?
   #new_comment_form
     %h2 Add new Comment
-    = render :partial => "comments/form", :locals => {:comment => @task.comments.new}
+    = render :partial => "comments/wmd_form", :locals => {:comment => @task.comments.new}
